--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,5 @@
   <app-root></app-root>
 </body>
 </html>
+<!-- <p>      ng build --prod --base-href "https://craig-ke.github.io/QuotesHub/"
+   npx angular-cli-ghpages --dir=dist/Quotes     </p> -->
